// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Simple Task Archived 1`] = `
<storybook-wrapper>
  <app-simple-task
    ng-reflect-task="[object Object]"
  >
    <div
      class="list-item TASK_ARCHIVED"
    >
      <label
        class="checkbox"
      >
        <input
          checked=""
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        
      </div>
    </div>
  </app-simple-task>
</storybook-wrapper>
`;

exports[`Storyshots Simple Task Default 1`] = `
<storybook-wrapper>
  <app-simple-task
    ng-reflect-task="[object Object]"
  >
    <div
      class="list-item TASK_INBOX"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        
        <a>
          <span
            class="icon-star"
          />
        </a>
      </div>
    </div>
  </app-simple-task>
</storybook-wrapper>
`;

exports[`Storyshots Simple Task Pinned 1`] = `
<storybook-wrapper>
  <app-simple-task
    ng-reflect-task="[object Object]"
  >
    <div
      class="list-item TASK_PINNED"
    >
      <label
        class="checkbox"
      >
        <input
          disabled="true"
          name="checked"
          type="checkbox"
        />
        <span
          class="checkbox-custom"
        />
      </label>
      <div
        class="title"
      >
        <input
          placeholder="Input title"
          readonly="true"
          type="text"
        />
      </div>
      <div
        class="actions"
      >
        
        <a>
          <span
            class="icon-star"
          />
        </a>
      </div>
    </div>
  </app-simple-task>
</storybook-wrapper>
`;
